--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,42 +1,72 @@
+.pt-3 {
+    padding: 0px !important;
+}
+
 .pt-2 {
     padding-top: 30px;
 }
+
 .page {
     border: 1px solid #ccc;
     border-radius: 10px;
-    height: 800px;
+    height: 100dvh;
 }
+
 .row {
     height: 100%;
 }
+
 .no-pl {
     padding-left: 0px;
 }
+
 .no-pr {
     padding-right: 0px;
 }
+
 .page-left {
     border-right: 1px solid #ccc;
     height: 100%;
+    width: 90%;
+    height: 100dvh;
 }
+
 .page-left-head {
     padding: 20px;
+    width: 100%;
 }
+.page-left-list{
+    width: 100%;
+    height: calc(100% - 150px);
+    overflow-y: scroll;
+}
+
 .list-user {
-    padding-left: 0px;
+    padding:12px;
 }
+
 .detail-user {
     list-style: none;
-    padding: 20px;
+    padding:20px 12px;
+    margin-bottom: 4px;
+    border-radius: 8px;
+    transition:  all .6s;
 }
+.detail-user:hover{
+    background-color: #f5f5f5;
+    transition:  all .6s;
+}
+
 .item {
     display: flex;
     justify-content: space-between;
 }
+
 .item-left {
     display: flex;
     align-items: center;
 }
+
 .item-dot {
     background-color: #683cb9;
     border-radius: 100%;
@@ -45,21 +75,25 @@
     margin-right: 8px;
     width: 8px;
 }
+
 .item-user {
     display: flex;
     align-items: center;
     gap: 10px
 }
+
 .item-avatar {
     width: 40px;
     height: 40px;
     position: relative;
 }
+
 img {
     width: 100%;
     height: 100%;
     border-radius: 100%;
 }
+
 .item-avatar-active {
     background-color: #42c318;
     border: 2px solid #fff;
@@ -70,10 +104,12 @@ img {
     right: 0px;
     width: 17px;
 }
+
 .page-right {
-    height: 100%;
+    height: 100dvh;
     position: relative;
 }
+
 .page-right-head {
     display: flex;
     justify-content: space-between;
@@ -84,24 +120,31 @@ img {
     top: 0px;
     left: 0px;
     width: 100%;
+    background-color: white;
+    z-index: 10;
 }
+
 .head-user {
     display: flex;
     align-items: center;
 }
+
 .head-avatar {
     width: 50px;
     height: 50px;
     margin-right: 10px;
 }
+
 .head-username {
     display: flex;
     align-items: center;
 }
+
 .head-name {
     margin-right: 10px;
 }
-.head-status > span:first-child {
+
+.head-status>span:first-child {
     background-color: #78bb21;
     border-radius: 100px;
     display: inline-block;
@@ -109,6 +152,7 @@ img {
     margin-right: 4px;
     width: 8px;
 }
+
 .head-status {
     display: flex;
     align-items: center;
@@ -116,44 +160,55 @@ img {
     border-radius: 24px;
     padding: 4px 8px;
 }
-.head-status > span:last-child {
+
+.head-status>span:last-child {
     color: #78bb21;
     font-size: 12px;
     font-weight: 700;
 }
+
 .head-back {
     display: none;
 }
+
 .page-right-message {
     padding: 20px 20px 40px;
 }
+
 .page-left .head-title {
     display: flex;
     justify-content: space-between;
 }
-.page-left .head-search .input-group input{
+
+.page-left .head-search .input-group input {
     border-radius: 40px;
 }
+
 .page-left .head-title .head-title-icon {
     display: flex;
     align-items: center;
     margin-bottom: 10px
 }
+
 .page-left .head-title .head-title-icon button {
     background-color: #b9bfbb57;
     border-radius: 18px;
 }
+
 .page-left .head-title .head-title-icon button:first-child {
     margin-right: 10px;
 }
+
 .page-left .head-title .head-title-icon button:last-child {
     margin-left: 10px;
 }
+
 .page-left .page-left-classify {
     display: flex;
     align-items: center;
     padding: 0px 20px;
 }
+
 .page-left .page-left-classify .active {
     background-color: #5fa2db47;
     color: #1616e9f7;
@@ -161,12 +216,15 @@ img {
     border-radius: 24px;
     margin-right: 10px;
 }
+
 .page-left .page-left-list .list-user .detail-user .item-last-message {
     color: #adadad;
 }
+
 .page-right .page-right-head .call button i {
     color: #0c0cd1;
 }
+
 .page-right .page-right-foot {
     position: absolute;
     bottom: 0;
@@ -175,11 +233,15 @@ img {
     padding: 10px 20px;
     display: flex;
     align-items: center;
+    z-index: 10;
+    background-color: white;
 }
+
 .page-right .page-right-foot .list-icon {
     display: flex;
     align-items: center;
 }
+
 .page-right .page-right-foot .list-icon button {
     border-radius: 100%;
     background-color: #095bef;
@@ -187,18 +249,22 @@ img {
     color: #fff;
     margin-right: 10px;
 }
+
 .page-right .page-right-foot .content {
     width: 100%;
 }
+
 .page-right .page-right-foot .content .input-group input {
     border-radius: 24px 0px 0px 24px;
 }
+
 .page-right .page-right-foot .content .input-group button {
     background-color: #095bef;
     padding: 0px 10px;
     color: #fff;
     margin-right: 10px;
 }
+
 .page-right .page-right-foot .icon-like button {
     border-radius: 100%;
     background-color: #095bef;
@@ -206,106 +272,280 @@ img {
     color: #fff;
     margin-left: 10px;
 }
+
 .page-right .page-right-message {
     padding: 112px 10px 81px 10px;
-    height: 100%;
+    height: calc(100% - 58px);
+    overflow-y: scroll;
 }
+
 .page .icon-shortcuts {
     border-right: 1px solid #ccc;
 }
+
 .page .chat-left {
     display: flex;
     justify-content: space-between;
 }
+
 .page .chat-left .list-shortcuts {
     width: 10%;
     padding: 24px 0px;
     border-right: 1px solid #ccc;
 }
-.page .chat-left .page-left {
-    width: 90%;
-}
+
 .page .chat-left .list-shortcuts .icon-shortcut {
-    border-bottom: 1px solid #ccc;
     padding: 10px;
     text-align: center;
+    border-radius: 6px;
+    margin: 1px 0px;
+    transition: all .3s;
 }
+.page .chat-left .list-shortcuts .icon-shortcut:hover{
+    background-color: #f5f5f5;
+    transition: all .3s;
+}
+
 .page .chat-left .list-shortcuts .icon-shortcut .icon-shortcut_btn {
-    color: #7266ba;
+    color: #9e9e9e;
     cursor: pointer;
+    transition: all .3s;
 }
+.page .chat-left .list-shortcuts .icon-shortcut:hover .icon-shortcut_btn {
+    color: #424242;
+    transition: all .3s;
+}   
+
 .page .chat-left .list-shortcuts .icon-shortcut .fa-lg {
     line-height: 1em;
+}
+
+/* chat message item */
+.page-right-message .message-item-cnt {
+    padding: 2px 0px;
+}
+
+.page-right-message .user-name {
+    font-size: 13px;
+    line-height: 15px;
+    font-weight: 500;
+}
+
+.page-right-message .body {
+    margin: 4px 0px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.body_user {
+    justify-content: flex-end !important;
+}
+
+.page-right-message .body .body-message {
+    max-width: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.page-right-message .user-avatar {
+    width: 42px;
+    height: 42px;
+    border-radius: 100%;
+    background-color: #ccc;
+    position: relative;
+    margin-top: 17px;
+}
+
+.page-right-message .user-avatar img {
+    position: absolute;
+    z-index: 1;
+    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.page-right-message .message-item-right {
+    width: calc(100% - 54px);
+}
+
+.page-right-message .body-text {
+    background: rgb(251, 251, 251) ;
+    background: linear-gradient(90deg, rgba(251, 251, 251, 1) 0%, rgba(255, 255, 255, 1) 57%, rgba(238, 242, 255, 1) 100%);
+    padding: 6px;
+    border-radius: 8px;
+    color: #0d00bd;
+    font-size: 14px;
+    line-height: 18px;
+    margin: 4px 0px;
+    width: fit-content;
+}
+
+.body-text_user {
+    background: rgb(50, 38, 255) !important;
+    background: linear-gradient(166deg, rgba(50, 38, 255, 1) 0%, rgba(114, 101, 185, 1) 34%, rgba(115, 140, 211, 1) 100%) !important;
+    color: white !important;
+}
+
+.page-right-message .message-item-create {
+    text-align: right;
+    font-size: 11px;
+    line-height: 13px;
+    font-weight: 400;
 }
 
 @media only screen and (max-width: 992px) and (min-width: 768px) {
     .page-left .list-user .detail-user {
         padding: 15px;
     }
+
     .page-left .list-user .detail-user .item {
         height: 50px;
     }
+
     .page-left .list-user .detail-user .item-user {
         height: 50px;
     }
+
     .page-left .list-user .detail-user .item-avatar {
         width: 50px;
         height: 50px;
     }
+
     .page-left .list-user .detail-user .item-user .item-last-message {
         display: none;
     }
+
     .page-left .list-user .detail-user .item .item-time {
         display: none;
     }
 }
 
 @media only screen and (max-width: 767px) {
+    .row{
+        margin: 0px;
+    }
+
+    .page-left {
+        border-right: none;
+        width: 100%;
+    }
+    .page-left-head{
+        padding: 12px;
+        position: fixed;
+        width: 100%;
+        z-index: 10;
+        background-color: white;
+        backdrop-filter: blur(9px);
+        background-color: hsla(0,0%,100%,.75);
+    }
+    .page-left .page-left-classify{
+        padding-bottom: 6px;
+        border-bottom: solid 1px #eeeeee;
+        position: fixed;
+        width: 100%;
+        top: 109px;
+        background-color: white;
+        z-index: 10;
+        backdrop-filter: blur(9px);
+        background-color: hsla(0,0%,100%,.75);
+    }
+    .page .chat-left .list-shortcuts{
+        position: fixed;
+        z-index: 20;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 8px 12px 20px 12px;
+        width: 100%;
+        bottom: 0;
+        box-shadow: 0 -3px 20px rgba(113,97,186,.15);
+        border-radius: 12px 12px 0 0;
+        backdrop-filter: blur(9px);
+        background-color: hsla(0,0%,100%,.75);
+    }
+    .page .chat-left .list-shortcuts .icon-shortcut{
+        width: 25%;
+    }
     .chat-left {
         display: block;
+        padding: 0px;
     }
+
     .chat-right {
         display: none;
+        padding: 0px;
     }
+    .list-user{
+        padding:150px 0px 80px 0px
+    }
+
     .page-left .list-user .detail-user {
         padding: 15px;
     }
+
     .page-left .list-user .detail-user .item {
         height: 50px;
     }
+
     .page-left .list-user .detail-user .item-user {
         height: 50px;
     }
+
     .page-left .list-user .detail-user .item-avatar {
         width: 50px;
         height: 50px;
     }
+
     .page-left .list-user .detail-user .item .item-time {
         display: none;
     }
+
     .page {
         border: none;
         height: 100%;
     }
-    .page-left {
-        border-right: none;
+    .page-left-list{
+        height: max-content;
     }
+
     .page-right {
-        padding: 0px 16px 124px;
+        padding:0px
     }
+
     .page-right .page-right-head {
         position: fixed;
+        padding: 12px;
+        backdrop-filter: blur(9px);
+        background-color: hsla(0,0%,100%,.75);
     }
+
     .page-right .page-right-foot {
         position: fixed;
+        padding: 8px 12px 20px 12px;
+        backdrop-filter: blur(9px);
+        background-color: hsla(0,0%,100%,.75);
     }
+
     .page-right .page-right-message {
-        padding: 0px;
-        margin-top: 99px;
+        padding: 100px 0px 70px 0px;
         overflow-y: initial;
+        height: max-content;
     }
+
     .page-right .page-right-head .head-back {
         display: block;
         margin-right: 10px;
+    }
+    .page-right-message .message-cnt{
+        padding: 0px 12px;
+    }
+    .page-right-message .body .body-message{
+        max-width: 90%;
+    }
+    .body-message_user{
+        justify-content: flex-end !important;
     }
 }
