--- a/src/assets/Chat.css
+++ b/src/assets/Chat.css
@@ -551,6 +551,9 @@
     width: 36px;
     height: 36px;
     border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .scroll-btn-act{
     visibility: visible;
