--- a/src/assets/skeleton.css
+++ b/src/assets/skeleton.css
@@ -1,4 +1,3 @@
-
 .placeholder {
   position: relative;
   background: #f1f0f0;
@@ -21,6 +20,19 @@
   width: 100%;
   min-height: 20px;
   height: 100%;
+}
+
+.x-process {
+  padding: 4px 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.x-process span:nth-child(2) {
+  color: var(--purple);
+  margin-left: 10px;
 }
 
 
