--- a/src/assets/login.css
+++ b/src/assets/login.css
@@ -1,100 +1,66 @@
 .login {
-  height: 100dvh;
+  width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .login-card {
-  width: 35vw;
-  padding: 32px 24px;
-  background-color: var(--white);
-  border-radius: 12px;
-  box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, .1);
-  ;
+  width: 40%;
+  box-shadow: var(--box-shadow);
+  border-radius: 8px;
+  padding: 16px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.login-card_title {
-  text-align: center;
-  color: var(--indigo);
-  font-size: 18px;
+.login-card_icon {
+  width: 74px;
+}
+
+.login-card_label {
+  font-size: 20px;
+  font-weight: 400;
   line-height: 20px;
-  font-weight: 500;
+  color: var(--purple);
 }
 
-.login-card_form {
-  margin-top: 32px;
+.login-form {
+  width: 85%;
+  margin-top: 26px;
 }
 
-.form-row {
+.login-form_row {
+  padding-bottom: 20px;
   position: relative;
-  padding-bottom: 10px;
 }
-
-.form-row-subdomain {
-  display: flex;
-  justify-content: space-between;
-}
-
-.domain-display {
-  padding: 0px 12px 0px 2px;
-  display: flex;
-  align-items: center;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-left: none;
-  border-radius: 0px 0.25rem 0.25rem 0px;
-}
-.form-control-subdomain{
-  text-align: end;
-}
-
-.form-row-error {
+.login-form_row-error{
   position: absolute;
-  color: var(--red);
+  bottom: 5px;
+  width: 100%;
+  left: 0;
+  color: var(--red-cl);
   font-size: 11px;
-  bottom: -4px;
 }
 
-.login-card_form-bot {
-  margin-top: 24px;
+.login-form_bot {
+  margin-top: 26px;
 }
 
-.form-btn {
+.login-form_bot-btn button {
   width: 100%;
-  height: 38px;
-  position: relative;
+  outline: none;
+  text-transform:none
 }
-
-.form-btn .btn-primary {
-  width: 100%;
-  background: rgb(50, 38, 255);
-  background: linear-gradient(166deg, rgba(50, 38, 255, 1) 0%, rgba(114, 101, 185, 1) 34%, rgba(115, 140, 211, 1) 100%);
-  border: none;
-}
-
-.form-btn-load {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgb(50, 38, 255);
-  background: linear-gradient(166deg, rgba(50, 38, 255, 1) 0%, rgba(114, 101, 185, 1) 34%, rgba(115, 140, 211, 1) 100%);
-  border-radius: 0.25rem;
-}
-
-.form-btn-load .spinner-rote {
-  color: var(--white);
-}
-
 @media only screen and (max-width: 767px) {
-  .login-card {
-    width: calc(100vw - 32px);
+  .login-card{
+    width: 100%;
+    box-shadow: none;
+    padding: 0px 12px;
+  }
+  .login-form{
+    width: 100%;
   }
 }
