--- a/src/assets/message.css
+++ b/src/assets/message.css
@@ -7,10 +7,10 @@
 
 .mess-head {
   position: fixed;
-    top:  0;
-    right: 0;
-    width: calc(100% - 410px);
-    z-index: 10;
+  top: 0;
+  right: 0;
+  width: calc(100% - 410px);
+  z-index: 10;
   padding: 8px;
   background-color: var(--white);
   box-shadow: var(--box-shadow);
@@ -116,6 +116,57 @@
   justify-content: flex-end;
 }
 
+.message-body_images,
+.message-body_images-2,
+.message-body_images-3 {
+  max-width: 100%;
+  min-width: 310px;
+  margin-top: 6px;
+}
+
+.message-body_images-item {
+  width: 100%;
+}
+
+.message-body_images-item img {
+  z-index: 1;
+  object-fit: cover;
+  width: 100%;
+  border-radius: 8px;
+}
+
+.message-body_images-2 {
+  grid-gap: 6px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.message-body_images-3 {
+  grid-gap: 6px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.message-body_images-2 .message-body_images-item,
+.message-body_images-3 .message-body_images-item {
+  position: relative;
+  aspect-ratio: 1 / 1;
+  border-radius: 8px;
+}
+
+.message-body_images-2 .message-body_images-item img,
+.message-body_images-3 .message-body_images-item img {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+
+
+
 .message-body_txt {
   background-color: #f8f5ff;
   border-radius: 0 8px 8px 8px;
@@ -136,16 +187,88 @@
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 10;
   width: calc(100% - 410px);
   background-color: var(--white);
   box-shadow: var(--box-shadow);
   padding: 12px 8px;
 }
 
+.mess-images {
+  width: 100%;
+  padding: 8px 0px;
+  overflow-x: scroll;
+}
+
+.mess-images-list {
+  display: flex;
+  width: max-content;
+}
+
+.mess-images-item {
+  width: 64px;
+  margin-right: 12px;
+  aspect-ratio: 1 / 1;
+  border-radius: 10px;
+  background-color: var(--bg-color);
+  position: relative;
+}
+
+.mess-images-item img,
+.mess-images-item video {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.mess-images-item video {
+  object-fit: contain;
+}
+
+.mess-images-item_load {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  backdrop-filter: blur(1px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mess-images-item_load span {
+  color: var(--white);
+}
+
+.mess-images-item_btn {
+  position: absolute;
+  width: 28px;
+  height: 28px;
+  z-index: 2;
+  background-color: var(--white);
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  top: -8px;
+  right: -8px;
+  box-shadow: var(--box-shadow);
+}
+
 .mess-ctl {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+}
+
+.mess-ctl_cnt {
+  display: flex;
+  align-items: center;
 }
 
 .mess-ctl_cnt-btn {
@@ -157,6 +280,25 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+.mess-ctl_cnt-btn-emoji {
+  margin: 0px 4px;
+  position: relative;
+}
+
+.emoji-cnt {
+  position: absolute;
+  z-index: 10;
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  top: -408px;
+  left: 0px;
+  display: none;
+}
+
+.emoji-cnt-act {
+  display: block;
 }
 
 .mess-ctl_cnt-btn i {
@@ -204,16 +346,38 @@
 }
 
 .message-img {
-  width: 350px;
+  width: 310px;
   border-radius: 8px;
 }
-.linkify-chat{
+
+.message-video {
+  width: 310px;
+  border-radius: 8px;
+}
+
+.linkify-chat {
   color: var(--text-black);
   text-decoration: underline;
 }
-.linkify-chat:hover{
+
+.linkify-chat:hover {
   color: var(--text-black);
 }
+
+.fa-spinner-anm {
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .mess-head_left button {
     display: flex;
@@ -226,14 +390,12 @@
   .bottom-ref {
     height: 150px;
   }
-  .mess-head{
-    width: 100%;
-  }
-  .mess-input-cnt {
+
+  .mess-head {
     width: 100%;
   }
 
-  .message-img {
-    width: 300px;
+  .mess-input-cnt {
+    width: 100%;
   }
 }
