--- a/src/assets/message.css
+++ b/src/assets/message.css
@@ -128,10 +128,19 @@
   width: 100%;
 }
 
-.message-body_images-item img {
+.message-body_images-item img,
+.message-body_images-item video {
   z-index: 1;
   object-fit: cover;
   width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
+.message-body_images-item video {
+  z-index: 1;
+  object-fit:contain;
+  width: 100%;
+  height: 100%;
   border-radius: 8px;
 }
 
