--- a/src/pages/ManageComment/style.module.css
+++ b/src/pages/ManageComment/style.module.css
@@ -51,7 +51,7 @@
 }
 .comment_right{
   width: 75%;
-  padding: 16px 0;
+  padding: 16px;
 }
 @media screen and (max-width: 1023.98px) {
   .comment_page_wrap{
